# hydrate-extension-inteligente

./: .gitignore  1.1.1  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.github/ISSUE_TEMPLATE/: reporte-de-error.md  sugerir-una-caracter-stica.md
components/battery_monitor/: CMakeLists.txt  Kconfig.projbuild  battery_monitor.c
components/battery_monitor/include/: battery_monitor.h
components/ble_driver/: CMakeLists.txt  Kconfig.projbuild  ble_common.c  ble_driver.c  ble_gap.c  gatt_server.c
components/ble_driver/include/: ble_common.h  ble_driver.h  ble_gap.h  gatt_server.h
components/ble_driver/services/: ble_service_battery.c  ble_service_device_time.c  ble_service_hydration.c
components/ble_driver/services/include/: ble_service_battery.h  ble_service_device_time.h  ble_service_hydration.h
components/driver-ble/: CMakeLists.txt  driver_ble.c
components/driver-ble/include/: driver_ble.h
components/driver_ble/: CMakeLists.txt  ble_driver.c  ble_gap.c  driver_ble.c  gatt_server.c
components/driver_ble/include/: ble_common.h  (+4 more)
components/hx711/: CMakeLists.txt  Kconfig.projbuild  hx711.c
components/hydrate_common/: CMakeLists.txt  hydrate_common.c
components/mpu6050_sensor/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  mpu6050_sensor.c
components/power-manager/: CMakeLists.txt  Kconfig.projbuild  power-manager.c
components/power-manager/include/: power-manager.h
components/power-manager/ulp/: motion.S  movement.S
components/storage/: CMakeLists.txt  Kconfig.projbuild  storage.c
logs/: 2022_09_24_latest.txt
main/: main.c
(+8 files in other folders)
